Added code from William that will be used later, and modified the excel to more closely represent the real data. Also added bolian values for germination.

--- a/Germination_2025.ipynb
+++ b/Germination_2025.ipynb
@@ -180,7 +180,94 @@
    "cell_type": "markdown",
    "id": "f2370f54",
    "metadata": {},
+   "source": [
+    "Code to take the mean germination time for each plate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28cad8b7",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34ba15dc",
+   "metadata": {},
+   "source": [
+    "Here is code made by William B. Reinar to handle the picture files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9d32d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = []; tt = []; gfs = []; ll = []; gg = []; pp = []\n",
+    "# Load image\n",
+    "figs = {}\n",
+    "for file in glob.glob('../data/GerminationAssay/BilderRaw/1.11.25_spiring_cropped/*'):\n",
+    "    sample         = file.split('/')[-1].split('.png')[0].split('cropped_')[1]#.split('RepBilde.')[1]\n",
+    "    line           = int(sample[:2][1]); gen = int(sample[3]); t = sample[5:7]; p = int(sample[-1:])\n",
+    "    \n",
+    "    # Load image\n",
+    "    img = cv2.imread(file)\n",
+    "    hsv = cv2.cvtColor(img, cv2.COLOR_RGB2HSV)\n",
+    "    \n",
+    "    # Define green thresholds\n",
+    "    #lower_green = np.array([35, 40, 40])   # H, S, V\n",
+    "    #upper_green = np.array([90, 255, 255])\n",
+    "    # Thresholds capturing blue tones\n",
+    "    lower_green = np.array([20, 30, 30])\n",
+    "    upper_green = np.array([90, 255, 255])\n",
+    "    # Threshold mask\n",
+    "    mask      = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "    img_copy  = img\n",
+    "    fig, axes = plt.subplots(ncols = 2)\n",
+    "    axes[0].imshow(img)\n",
+    "    # Create black image of same shape\n",
+    "    masked_img = np.full_like(img, 255)\n",
+    "    # Copy only green pixels into masked_img\n",
+    "    masked_img[mask > 0] = img[mask > 0]\n",
+    "    axes[1].imshow(masked_img)\n",
+    "    # Count green pixels\n",
+    "    green_pixels   = np.sum(mask > 0)\n",
+    "    total_pixels   = img.shape[0] * img.shape[1]\n",
+    "    green_fraction = green_pixels / total_pixels\n",
+    "    \n",
+    "    print(sample, \"Green fraction:\", green_fraction)\n",
+    "\n",
+    "    \n",
+    "    ll += [line]; gg += [gen]; tt += [t]; pp += [p]; gfs += [green_fraction]\n",
+    "    #plt.savefig('../data/GerminationAssay/Bilder/RepBilde2.%s.white.png' % sample, dpi = 300)\n",
+    "    plt.show()\n",
+    "    figs[sample] = fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed88b12b",
+   "metadata": {},
+   "source": [
+    "Here are the required packages to run the previous code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff37f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
@@ -199,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
