A working code for green fraction, but it includes some grey areas as well. Needs refinement.

--- a/Germination_2025.ipynb
+++ b/Germination_2025.ipynb
@@ -6149,14 +6149,62 @@
     "    temperature = no_png[9:11]\n",
     "    date = int(no_png[-2:])\n",
     "    plate = int(no_png[6])\n",
-    "    print(file)\n",
-    "    print(no_path)\n",
-    "    print(no_png)\n",
-    "    print(line)\n",
-    "    print(generation)\n",
-    "    print(temperature)\n",
-    "    print(date)\n",
-    "    print(plate)"
+    "   # print(file)\n",
+    "   # print(no_path)\n",
+    "   # print(no_png)\n",
+    "   # print(line)\n",
+    "   # print(generation)\n",
+    "   # print(temperature)\n",
+    "   # print(date)\n",
+    "   # print(plate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afbc171d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt = []; gfs = []; ll = []; gg = []; pp = []; dd = []\n",
+    "# Load image\n",
+    "figs = {}\n",
+    "for file in glob.glob('Cropped_germination_pictures/*'):\n",
+    "    sample         = file.split('\\\\')[-1].split('.png')[0]\n",
+    "    line           = int(sample[:2][1]); gen = int(sample[3]); t = sample[9:11]; p = int(sample[6]); d = int(sample[-2:])\n",
+    "    \n",
+    "    # Load image\n",
+    "    img = cv2.imread(file)\n",
+    "    hsv = cv2.cvtColor(img, cv2.COLOR_RGB2HSV)\n",
+    "    \n",
+    "    # Define green thresholds\n",
+    "    #lower_green = np.array([35, 40, 40])   # H, S, V\n",
+    "    #upper_green = np.array([90, 255, 255])\n",
+    "    # Thresholds capturing blue tones\n",
+    "    lower_green = np.array([20, 30, 30])\n",
+    "    upper_green = np.array([90, 255, 255])\n",
+    "    # Threshold mask\n",
+    "    mask      = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "    img_copy  = img\n",
+    "    fig, axes = plt.subplots(ncols = 2)\n",
+    "    axes[0].imshow(img)\n",
+    "    # Create black image of same shape\n",
+    "    masked_img = np.full_like(img, 255)\n",
+    "    # Copy only green pixels into masked_img\n",
+    "    masked_img[mask > 0] = img[mask > 0]\n",
+    "    axes[1].imshow(masked_img)\n",
+    "    # Count green pixels\n",
+    "    green_pixels   = np.sum(mask > 0)\n",
+    "    total_pixels   = img.shape[0] * img.shape[1]\n",
+    "    green_fraction = green_pixels / total_pixels\n",
+    "    \n",
+    "    print(sample, \"Green fraction:\", green_fraction)\n",
+    "\n",
+    "    \n",
+    "    ll += [line]; gg += [gen]; tt += [t]; pp += [p]; dd += [d]; gfs += [green_fraction]\n",
+    "    #plt.savefig('../data/GerminationAssay/Bilder/RepBilde2.%s.white.png' % sample, dpi = 300)\n",
+    "    plt.show()\n",
+    "    figs[sample] = fig"
    ]
   }
  ],
